fix background color bug on dark mode with mozilla

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -185,4 +185,5 @@ input[type=submit] {
 
 .dark-theme {
   filter: invert(0.95) hue-rotate(180deg);
+  background-color: variables.$clr-light;
 }
